2007-06-12  Antonio Barbalace <barbalace@igi.cnr.it>

	* base/include/asm-x86_64:rtai_sched.h: multiversion, the one to be 
	  used to be decided yet.
	* base/arch/x86_64/hal/hal.immed and base/arch/i386/hal/hal.immed: 
	  added rt_end_eoi_irq for APIC interrupts.

2007-06-07  Roberto Bucher <roberto.bucher@supsi.ch>

	* rtai-lab/scilab/devices/*.c: Added copyright lines in the sources.

2007-06-04  Antonio Barbalace <barbalace@igi.cnr.it>
	    Paolo Mantegazza <mantegazza@aero.polimi.it>
            	
	* base/sched/sched.c: use unsigned long in place of int for 
	  rt_smp_linux_cr0, to work with for 64 bits archs also.

2007-06-04  Antonio Barbalace <barbalace@igi.cnr.it>
            	
	* base/include/asm-x86_64/rtai_sched.h: fixed support for context
	  switches of RTAI own kernel tasks.

2007-06-01  Emanuele Clerici <clerici@aero.polimi.it>

	* base/ipc/mq.c: check possible return error of mutex locking and
	  use timed mutex locks in timed send/receive.

2007-05-30  Emanuele Clerici <clerici@aero.polimi.it>

	* base/include/rtai_pmq.h and rtai_mq.h: added declarations for 
	  notify support.
	* base/ipc/mq.c: added notify support.

2007-05-25  Lennart.C. Karssen <l.c.karssen@phys.uu.nl>
	    Paolo Mantegazza <mantegazza@aero.polimi.it>

        * addons/comedi/rtai_comedi.h: fixed a missing initialisation of the 
	  local (on stack) copy of bits in comedi_dio_bitfield.

2007-05-25  Emanuele Clerici <clerici@aero.polimi.it>

	* base/include/rtai_lxrt.h: added syscall numbers for Posix MQ
	  notification from user space.
	* base/include/rtai_signal.h: added a few declarations to allow using
	  RTAI signals for Posix MQ notification.
	* base/include/rtai_tasklets.h: added extensions for using RTAI 
	  tasklets to support Posix timers.
	* base/include/rtai_posix.h: revised kernel space part for
	  compatibility with user space references, added Posix timers.
        * base/tasklets/signal.c: added a few controls more, support for MQ