@@ -36,9 +36,7 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-@CONFIG_KBUILD_FALSE@@CONFIG_X86_64_FALSE@am__append_1 = libsched_sched.a
-@CONFIG_X86_64_FALSE@am__append_2 = rtai_sched$(modext)
-@CONFIG_KBUILD_FALSE@am__append_3 = libsched_lxrt.a
+@CONFIG_KBUILD_FALSE@am__append_1 = libsched_sched.a libsched_lxrt.a
 subdir = base/sched
 DIST_COMMON = $(srcdir)/GNUmakefile.am $(srcdir)/GNUmakefile.in \
 	$(srcdir)/Makefile.kbuild
@@ -59,11 +57,8 @@ am_libsched_lxrt_a_OBJECTS = libsched_lxrt_a-sched.$(OBJEXT) \
 	libsched_lxrt_a-sys.$(OBJEXT) libsched_lxrt_a-api.$(OBJEXT)
 libsched_lxrt_a_OBJECTS = $(am_libsched_lxrt_a_OBJECTS)
 libsched_sched_a_LIBADD =
-am__libsched_sched_a_SOURCES_DIST = sched.c sys.c api.c
-@CONFIG_X86_64_FALSE@am_libsched_sched_a_OBJECTS =  \
-@CONFIG_X86_64_FALSE@	libsched_sched_a-sched.$(OBJEXT) \
-@CONFIG_X86_64_FALSE@	libsched_sched_a-sys.$(OBJEXT) \
-@CONFIG_X86_64_FALSE@	libsched_sched_a-api.$(OBJEXT)
+am_libsched_sched_a_OBJECTS = libsched_sched_a-sched.$(OBJEXT) \
+	libsched_sched_a-sys.$(OBJEXT) libsched_sched_a-api.$(OBJEXT)
 libsched_sched_a_OBJECTS = $(am_libsched_sched_a_OBJECTS)
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/base/config/autoconf/depcomp
@@ -77,8 +72,7 @@ CCLD = $(CC)
 LINK = $(LIBTOOL) --tag=CC --mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
 	$(AM_LDFLAGS) $(LDFLAGS) -o $@
 SOURCES = $(libsched_lxrt_a_SOURCES) $(libsched_sched_a_SOURCES)
-DIST_SOURCES = $(libsched_lxrt_a_SOURCES) \
-	$(am__libsched_sched_a_SOURCES_DIST)
+DIST_SOURCES = $(libsched_lxrt_a_SOURCES) $(libsched_sched_a_SOURCES)
 RECURSIVE_TARGETS = all-recursive check-recursive dvi-recursive \
 	html-recursive info-recursive install-data-recursive \
 	install-exec-recursive install-info-recursive \
@@ -368,30 +362,35 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 moduledir = @RTAI_MODULE_DIR@
 modext = @RTAI_MODULE_EXT@
-schedulers = $(am__append_2) rtai_lxrt$(modext)
-@CONFIG_X86_64_FALSE@main_scheduler = rtai_sched
+schedulers = rtai_sched$(modext) rtai_lxrt$(modext)
 # $(main_scheduler) is the scheduler links are created from;
 # it is rtai_sched for all archs, except x86_64, where rtai_lxrt is used
 # $(legacy_schedulers) are all the schedulers that are generated
 # as links of $(main_scheduler); for x86_64, they are all but rtai_lxrt
-@CONFIG_X86_64_TRUE@main_scheduler = rtai_lxrt
-@CONFIG_X86_64_FALSE@legacy_schedulers = up mup smp ksched
-@CONFIG_X86_64_TRUE@legacy_schedulers = up mup smp ksched sched
-noinst_LIBRARIES = $(am__append_1) $(am__append_3)
+#if CONFIG_X86_64
+#main_scheduler = rtai_lxrt
+#legacy_schedulers = up mup smp ksched sched
+#else # CONFIG_X86_64
+main_scheduler = rtai_sched
+legacy_schedulers = up mup smp ksched
+#endif # CONFIG_X86_64
+noinst_LIBRARIES = $(am__append_1)
 builtins = @RTAI_BUILTIN_MODLIST@
 @CONFIG_KBUILD_TRUE@builtins_srclist = $(wildcard $(foreach mod,$(builtins),$(patsubst %,$(top_srcdir)/base/%/*.[chS],$(mod))))
 @CONFIG_KBUILD_FALSE@builtins_objlist = $(foreach mod,$(builtins),$(patsubst %,../%/rtai_$(notdir $(mod)).o,$(mod)))
 
 # SCHED
-@CONFIG_X86_64_FALSE@libsched_sched_a_SOURCES = sched.c sys.c api.c
-@CONFIG_X86_64_FALSE@rtai_sched_extradef = -DUSE_RTAI_TASKS=1
-@CONFIG_KBUILD_FALSE@@CONFIG_X86_64_FALSE@libsched_sched_a_AR = $(CROSS_COMPILE)ar cru
-@CONFIG_KBUILD_FALSE@@CONFIG_X86_64_FALSE@libsched_sched_a_CPPFLAGS = \
-@CONFIG_KBUILD_FALSE@@CONFIG_X86_64_FALSE@	@RTAI_KMOD_CFLAGS@ \
-@CONFIG_KBUILD_FALSE@@CONFIG_X86_64_FALSE@	-DUSE_RTAI_TASKS=1 \
-@CONFIG_KBUILD_FALSE@@CONFIG_X86_64_FALSE@	-I$(top_srcdir)/base/include \
-@CONFIG_KBUILD_FALSE@@CONFIG_X86_64_FALSE@	-I../include
+#if !CONFIG_X86_64
+libsched_sched_a_SOURCES = sched.c sys.c api.c
+rtai_sched_extradef = -DUSE_RTAI_TASKS=1
+@CONFIG_KBUILD_FALSE@libsched_sched_a_AR = $(CROSS_COMPILE)ar cru
+@CONFIG_KBUILD_FALSE@libsched_sched_a_CPPFLAGS = \
+@CONFIG_KBUILD_FALSE@	@RTAI_KMOD_CFLAGS@ \
+@CONFIG_KBUILD_FALSE@	-DUSE_RTAI_TASKS=1 \
+@CONFIG_KBUILD_FALSE@	-I$(top_srcdir)/base/include \
+@CONFIG_KBUILD_FALSE@	-I../include
 
+#endif # !CONFIG_X86_64
 
 # LXRT
 libsched_lxrt_a_SOURCES = sched.c sys.c api.c
@@ -855,14 +854,14 @@ uninstall-info: uninstall-info-recursive
 @CONFIG_KBUILD_TRUE@	@RTAI_KBUILD_CLEAN@
 @CONFIG_KBUILD_TRUE@	@$(RM) -f $(foreach src,$(builtins_srclist),$(notdir $(src)))
 
-@CONFIG_KBUILD_TRUE@@CONFIG_X86_64_FALSE@rtai_sched.ko: @RTAI_KBUILD_ENV@
-@CONFIG_KBUILD_TRUE@@CONFIG_X86_64_FALSE@rtai_sched.ko: $(libsched_sched_a_SOURCES) $(builtins_srclist)
-@CONFIG_KBUILD_TRUE@@CONFIG_X86_64_FALSE@	@RTAI_KBUILD_TOP@ \
-@CONFIG_KBUILD_TRUE@@CONFIG_X86_64_FALSE@	@RTAI_KBUILD_CMD@ rtai_extradef="$(rtai_sched_extradef)" \
-@CONFIG_KBUILD_TRUE@@CONFIG_X86_64_FALSE@	@RTAI_KBUILD_BOTTOM@
+@CONFIG_KBUILD_TRUE@rtai_sched.ko: @RTAI_KBUILD_ENV@
+@CONFIG_KBUILD_TRUE@rtai_sched.ko: $(libsched_sched_a_SOURCES) $(builtins_srclist)
+@CONFIG_KBUILD_TRUE@	@RTAI_KBUILD_TOP@ \
+@CONFIG_KBUILD_TRUE@	@RTAI_KBUILD_CMD@ rtai_extradef="$(rtai_sched_extradef)" \
+@CONFIG_KBUILD_TRUE@	@RTAI_KBUILD_BOTTOM@
 
-@CONFIG_KBUILD_FALSE@@CONFIG_X86_64_FALSE@rtai_sched.o: libsched_sched.a $(builtins_objlist)
-@CONFIG_KBUILD_FALSE@@CONFIG_X86_64_FALSE@	$(CROSS_COMPILE)$(LD) --whole-archive $< -r -o $@ $(builtins_objlist)
+@CONFIG_KBUILD_FALSE@rtai_sched.o: libsched_sched.a $(builtins_objlist)
+@CONFIG_KBUILD_FALSE@	$(CROSS_COMPILE)$(LD) --whole-archive $< -r -o $@ $(builtins_objlist)
 
 @CONFIG_KBUILD_TRUE@rtai_lxrt.ko: @RTAI_KBUILD_ENV@
 @CONFIG_KBUILD_TRUE@rtai_lxrt.ko: $(libsched_lxrt_a_SOURCES) $(builtins_srclist)
